[tool.poetry]
name = "muscle3playground"
version = "0.1.0"
description = ""
authors = ["Pablo Rodríguez Sánchez <pablo.rodriguez.sanchez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "1.25"
matplotlib = "^3.8.1"
wheel = "^0.41.3"
setuptools = "^68.2.2"
muscle3 = "^0.7.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.17.2"
pytest = "^7.4.3"
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
